application/mise/mise-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mise-deployment
  labels:
    app: mise-d
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mise-p
  template:
    metadata:
      name: mise-pod
      labels:
        app: mise-p
    spec:
      containers:
        - name: mise
          image: image-registry.openshift-image-registry.svc:5000/test-login/mise@sha256:204c2e229f0f6b6f06d997d08556ae81d14f93013dbef27bc32cded04c1f0205
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: mise-service
spec:
  selector:
    app: mise-p
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
