application/mise/mise-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mise-route
  labels:
    app: mise-r
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: mise-service
